--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,30 +20,59 @@
     "housing_data = pd.read_csv('../data/price_index.csv')\n",
     "interest_rate_data = pd.read_csv('../data/canadian_interest_rates.csv')\n",
     "income_data = pd.read_csv('../data/income_data.csv')\n",
-    "population_data = pd.read_csv('../data/calgary_population.csv')"
+    "population_data = pd.read_csv('../data/calgary_population.csv')\n",
+    "median_house_price_data = pd.read_csv('../data/median_assessed_value.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            median_re_assessed_value\n",
+      "REF_DATE                            \n",
+      "2005-01-01                    206500\n",
+      "2005-02-01                    206500\n",
+      "2005-03-01                    206500\n",
+      "2005-04-01                    206500\n",
+      "2005-05-01                    206500\n",
+      "2005-06-01                    206500\n",
+      "2005-07-01                    206500\n",
+      "2005-08-01                    206500\n",
+      "2005-09-01                    206500\n",
+      "2005-10-01                    206500\n",
+      "2005-11-01                    206500\n",
+      "2005-12-01                    206500\n",
+      "2006-01-01                    221000\n",
+      "2006-02-01                    221000\n",
+      "2006-03-01                    221000\n",
+      "2006-04-01                    221000\n",
+      "2006-05-01                    221000\n",
+      "2006-06-01                    221000\n",
+      "2006-07-01                    221000\n",
+      "2006-08-01                    221000\n",
+      "2006-09-01                    221000\n",
+      "2006-10-01                    221000\n",
+      "2006-11-01                    221000\n",
+      "2006-12-01                    221000\n"
+     ]
+    }
+   ],
    "source": [
-    "income_data = pd.read_csv('../data/income_data.csv')"
+    "median_house_price_data = pd.read_csv('../data/median_assessed_value.csv')\n",
+    "median_house_price_data.rename(columns={'ROLL_YEAR': 'REF_DATE'}, inplace=True)\n",
+    "median_house_price_data['REF_DATE'] = pd.to_datetime(median_house_price_data['REF_DATE'], format='%Y')\n",
+    "median_house_price_data = median_house_price_data.set_index('REF_DATE').resample('MS').ffill()\n",
+    "print(median_house_price_data.head(24))  # Shows first year of monthly data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "income_data.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,12 +219,12 @@
     "#Dropping Unused Columns\n",
     "income_data.drop(['DGUID', 'Age group', 'Sex', 'Income source',\n",
     "        'UOM', 'UOM_ID', 'SCALAR_FACTOR', 'SCALAR_ID', 'VECTOR',\n",
-    "       'COORDINATE', 'STATUS', 'SYMBOL', 'TERMINATED', 'DECIMALS','Statistics'], axis=1, inplace=True)\n"
+    "       'COORDINATE', 'STATUS', 'SYMBOL', 'TERMINATED', 'DECIMALS','Statistics', 'GEO'], axis=1, inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +259,7 @@
        "True"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,12 +401,18 @@
     "population_monthly['REF_DATE'] = population_monthly['REF_DATE'].dt.to_period('M').dt.to_timestamp()\n",
     "\n",
     "population_monthly.dropna(inplace=True)\n",
+    "\n",
+    "\n",
+    "# Filter population data to include only records from 1981 onwards, This is to match the other data sets\n",
+    "population_monthly = population_monthly[population_monthly['REF_DATE'] >= '1981-01-01']\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -391,24 +426,24 @@
       "1981-03-01   25.8\n",
       "1981-04-01   26.7\n",
       "1981-05-01   26.7\n",
-      "     REF_DATE   Population   Annual Change\n",
-      "13 1952-01-01     141000.0            6.82\n",
-      "14 1952-02-01     141000.0            6.82\n",
-      "15 1952-03-01     141000.0            6.82\n",
-      "16 1952-04-01     141000.0            6.82\n",
-      "17 1952-05-01     141000.0            6.82\n",
+      "      REF_DATE   Population   Annual Change\n",
+      "361 1981-01-01     568000.0             4.8\n",
+      "362 1981-02-01     568000.0             4.8\n",
+      "363 1981-03-01     568000.0             4.8\n",
+      "364 1981-04-01     568000.0             4.8\n",
+      "365 1981-05-01     568000.0             4.8\n",
       "    REF_DATE    VALUE\n",
       "0 1981-01-01  17.0575\n",
       "1 1981-02-01  17.1275\n",
       "2 1981-03-01  16.9850\n",
       "3 1981-04-01  17.0300\n",
       "4 1981-05-01  18.5875\n",
-      "    REF_DATE               GEO  VALUE\n",
-      "0 1981-01-01  Calgary, Alberta  45000\n",
-      "1 1981-02-01  Calgary, Alberta  45000\n",
-      "2 1981-03-01  Calgary, Alberta  45000\n",
-      "3 1981-04-01  Calgary, Alberta  45000\n",
-      "4 1981-05-01  Calgary, Alberta  45000\n"
+      "    REF_DATE  VALUE\n",
+      "0 1981-01-01  45000\n",
+      "1 1981-02-01  45000\n",
+      "2 1981-03-01  45000\n",
+      "3 1981-04-01  45000\n",
+      "4 1981-05-01  45000\n"
      ]
     }
    ],
@@ -419,6 +454,164 @@
     "print(interest_rate_monthly.head())\n",
     "print(income_monthly.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    REF_DATE  VALUE_housing  VALUE_interest    VALUE   Population  \\\n",
+      "0 1981-01-01           25.3         17.0575  45000.0     568000.0   \n",
+      "1 1981-02-01           25.5         17.1275  45000.0     568000.0   \n",
+      "2 1981-03-01           25.8         16.9850  45000.0     568000.0   \n",
+      "3 1981-04-01           26.7         17.0300  45000.0     568000.0   \n",
+      "4 1981-05-01           26.7         18.5875  45000.0     568000.0   \n",
+      "\n",
+      "    Annual Change  median_re_assessed_value  \n",
+      "0             4.8                       NaN  \n",
+      "1             4.8                       NaN  \n",
+      "2             4.8                       NaN  \n",
+      "3             4.8                       NaN  \n",
+      "4             4.8                       NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge housing data with interest rate data on REF_DATE\n",
+    "merged_data = housing_data.merge(interest_rate_monthly, on='REF_DATE', how='left', suffixes=('_housing', '_interest'))\n",
+    "\n",
+    "# Merge with income data on REF_DATE\n",
+    "merged_data = merged_data.merge(income_monthly, on='REF_DATE', how='left')\n",
+    "\n",
+    "# Merge with population data on REF_DATE\n",
+    "merged_data = merged_data.merge(population_monthly, on='REF_DATE', how='left')\n",
+    "\n",
+    "# Merge with the previously merged dataset on REF_DATE\n",
+    "merged_data = merged_data.merge(median_house_price_data, on='REF_DATE', how='left')\n",
+    "\n",
+    "# View the merged data\n",
+    "print(merged_data.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    REF_DATE  Housing_Price_Index  Interest_Rate  Median_Income   Population  \\\n",
+      "0 1981-01-01                 25.3        17.0575        45000.0     568000.0   \n",
+      "1 1981-02-01                 25.5        17.1275        45000.0     568000.0   \n",
+      "2 1981-03-01                 25.8        16.9850        45000.0     568000.0   \n",
+      "3 1981-04-01                 26.7        17.0300        45000.0     568000.0   \n",
+      "4 1981-05-01                 26.7        18.5875        45000.0     568000.0   \n",
+      "\n",
+      "    Annual Change  Median_House_Price  \n",
+      "0             4.8                 NaN  \n",
+      "1             4.8                 NaN  \n",
+      "2             4.8                 NaN  \n",
+      "3             4.8                 NaN  \n",
+      "4             4.8                 NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Renaming columns for more clarity\n",
+    "merged_data.rename(columns={\n",
+    "    'VALUE_housing': 'Housing_Price_Index',\n",
+    "    'VALUE_interest': 'Interest_Rate',\n",
+    "    'VALUE': 'Median_Income',\n",
+    "    'Population': 'Calgary_Population',\n",
+    "    'Annual Change': 'Annual_Population_Change',\n",
+    "    'median_re_assessed_value': 'Median_House_Price'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# View the updated DataFrame\n",
+    "print(merged_data.tail())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>REF_DATE</th>\n",
+       "      <th>VALUE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>488</th>\n",
+       "      <td>2021-09-01</td>\n",
+       "      <td>43400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>489</th>\n",
+       "      <td>2021-10-01</td>\n",
+       "      <td>43400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>490</th>\n",
+       "      <td>2021-11-01</td>\n",
+       "      <td>43400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>491</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>43400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>48000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      REF_DATE  VALUE\n",
+       "488 2021-09-01  43400\n",
+       "489 2021-10-01  43400\n",
+       "490 2021-11-01  43400\n",
+       "491 2021-12-01  43400\n",
+       "492 2022-01-01  48000"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
